<resources>
    <string name="app_name">Tasks</string>
    <string name="tasks">Tasks</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="sort_by">Sort By</string>
    <string name="clear_completed">Clear Completed</string>
    <string name="new_task">New Task</string>
    <string name="view_as">View as</string>
    <string name="new_list">New List</string>

    <string name="sort_by_name">Sort By: Name</string>
    <string name="sort_by_time">Sort By: Time</string>
    <string name="sort_by_priority">Sort By: Priority</string>
    <string name="change_view_of_items">Change Item View</string>
    <string name="create_task">Create Task</string>
    <string name="add_tasks">Added Tasks will appear here !</string>
    <string name="create_a_task">Create a Task</string>
    <string name="task_title">Task title</string>
    <string name="example_task">Ex. Do a 500m sprint</string>
    <string name="task_priority">Task Priority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="accept">Accept</string>
    <string name="name">Name</string>
    <string name="list_name">List name</string>
    <string name="choose_icon">Choose Icon</string>

    <string name="all_tasks">All Tasks</string>
    <string name="add_list">Add List</string>
    <string name="create_new_list">Create a new List</string>

    <string name="loading">Loading…</string>
    <string name="error">Oopsie! an error occurred</string>
    <string name="delete">Delete</string>
    <string name="show_completed">Show Completed</string>
    <string name="edit">Edit</string>
    <string name="pending">Pending</string>
    <string name="mark_as_completed">Mark as Completed</string>
    <string name="completed">Completed</string>
    <string name="mark_as_incomplete">Mark as Incomplete</string>

    <string name="confirm_delete">Confirm delete</string>
    <string name="delete_pending_message">The task is still pending.</string>

    <string name="completed_task_helper_msg">Completed Tasks will appear here !</string>
    <string name="title">Title</string>
    <string name="due_date">Due Date</string>
    <string name="change_priority">Change Priority</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="set_progress">Set Progress</string>
</resources>