<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/scrollView"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="30dp"
        >

        <TextView
            android:id="@+id/tvHelperTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/task_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/example_task"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="3"
            android:paddingTop="0dp"
            android:paddingBottom="7dp"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            app:flow_maxElementsWrap="@android:integer/config_shortAnimTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHelperTaskTitle" />

        <TextView
            android:id="@+id/tvHelperPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="18dp"
            android:text="@string/task_priority"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etTaskTitle" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/btnGroupPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHelperPriority"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/btnPriorityHigh"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/high"
                android:textAllCaps="false"

                />

            <Button
                android:id="@+id/btnPriorityMedium"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/medium"
                android:textAllCaps="false"

                />

            <Button
                android:id="@+id/btnPriorityLow"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/poppins"

                android:text="@string/low"
                android:textAllCaps="false" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <ImageButton
            android:id="@+id/ibCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@drawable/ic_outline_calendar_today_24"
            app:layout_constraintBottom_toBottomOf="@id/textLayoutDate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnGroupPriority"
            app:tint="@android:color/darker_gray" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintLeft_toRightOf="@id/ibCalendar"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnGroupPriority">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:fontFamily="@font/poppins"
                android:hint="@string/date"
                android:inputType="date"
                android:paddingBottom="8dp"
                android:text="26/5/2022"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/etDateClickProxy"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="6dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@id/textLayoutDate"
            app:layout_constraintLeft_toLeftOf="@id/textLayoutDate"
            app:layout_constraintRight_toRightOf="@id/textLayoutDate"
            app:layout_constraintTop_toTopOf="@id/textLayoutDate" />

        <ImageButton
            android:id="@+id/ibTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:src="@drawable/ic_baseline_alarm_24"
            app:layout_constraintBottom_toBottomOf="@id/textLayoutTime"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/textLayoutTime"
            app:tint="@android:color/darker_gray" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutTime"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintLeft_toRightOf="@id/ibCalendar"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLayoutDate"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:fontFamily="@font/poppins"
                android:hint="@string/time"
                android:inputType="time"
                android:paddingBottom="8dp"
                android:text="12:34"

                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/etTimeClickProxy"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="6dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@id/textLayoutTime"
            app:layout_constraintLeft_toLeftOf="@id/textLayoutTime"
            app:layout_constraintRight_toRightOf="@id/textLayoutTime"
            app:layout_constraintTop_toTopOf="@id/textLayoutTime" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutList"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/list"
            app:layout_constraintTop_toBottomOf="@id/textLayoutTime">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLayoutList">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="top|start"
                android:minLines="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCreateTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLayoutDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
